# TensorFuse

./: .gitignore  CMakeLists.txt  GETTING_STARTED.md  LICENSE  README.md  debug_int8.py  debug_optimized.cu  debug_scale_passing.py  docker-compose.yml  pyproject.toml  requirements.txt  simple_int8_debug.py
benchmarks/: CMakeLists.txt  bert_baseline.cu  nsight_trace.sh  roofline_analysis.cu  tensorfuse_c_api.h  tensorfuse_wrappers.cpp
cmake/: FindCUTLASS.cmake  TensorFuseConfig.cmake.in
docker/: README.md  cuda12.6-runtime.Dockerfile  entrypoint.sh
docs/: QUICK_START.md
results/: README.md
results/benchmarks/: bert_baseline_results.json  roofline_data.txt
scripts/: benchmark.sh  build.sh  clean.sh  deploy_python_module.sh  organize_results.py  test-cpp.sh  test-python.sh  test.sh  verify.sh  view_results.py
src/: CMakeLists.txt  tensorfuse.h  tensorfuse_c_api.cpp
src/kernels/: fused_gemm_bias_gelu.cu  fused_gemm_bias_gelu.h  fused_gemm_bias_gelu_int8.cu  fused_gemm_bias_gelu_optimized.cu  fused_softmax_dropout.cu  fused_softmax_dropout.h  kernel_traits.h
src/python/: CMakeLists.txt  core_bindings.cpp  memory_bindings.cpp  profiler_bindings.cpp  setup.py  tensor_bindings.cpp  tensorfuse_python.cpp
src/python/tensorfuse/: __init__.py  core.py  memory.py  profiler.py  utils.py
src/runtime/: memory_manager.cpp  memory_manager.h  runtime_context.cpp  runtime_context.h
src/tensorfuse/: config.h  profiler.h  tensorfuse.h  types.h
src/tests/: CMakeLists.txt  README.md  TESTING_STRATEGY.md  run_all_tests.py  test_c_api_debug.cpp  test_gemm_edge_cases.cu  test_kernels.cu  test_kernels_simple  test_kernels_simple.cpp  test_simple_debug.cu  test_softmax_dropout.cu  test_working_kernel  test_working_kernel.cu  test_wrapper_debug.cpp
src/tests/python/: CMakeLists.txt  README.md  run_tests.py  test_core_bindings.py  test_int8_tensor_cores.py  test_mathematical_verification.py  test_numpy_integration.py  test_profiling.py  test_pytorch_integration.py  test_tensor_core_performance.py
src/utils/: cuda_utils.h  error_handling.cpp  error_handling.h
test_results2/: bert_baseline_results.json
